--- a/Move.toml
+++ b/Move.toml
@@ -5,7 +5,7 @@ license = "MPL 2.0"
 authors = ["Medet Ahmetson (admin@blocklords.io)"]
 
 [dependencies]
-Sui = { local = "../sui/crates/sui-framework" }
+Sui = { git = "https://github.com/MystenLabs/sui.git", subdir="crates/sui-framework/packages/sui-framework/", rev = "testnet" }
 
 [addresses]  
 mini_miners = "0x0"
